--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Jorge De Jesus Digital Business Card</title>
-<meta property="og:image" content="https://i.postimg.cc/C1n7pD8P/Lynnette-De-Jesus.jpg" />
+<meta property="og:image" content="https://i.postimg.cc/k4QC9R9v/Jorge-De-Jesus-Phone.png" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="themes/1/js-image-slider.css" rel="stylesheet" type="text/css" />
     <script src="themes/1/js-image-slider.js" type="text/javascript"></script>
